# python-games

./: .gitignore  README.md  pyproject.toml
guess_the_number/: guess.py
snake/: configuration.py  food.py  main.py  snake.py
