[tool.poetry]
name = "games"
version = "0.1.0"
description = "Create basic games to learn pyglet"
authors = ["leoporoar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pyglet = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
